--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 </label>
               </div>
 
-              <button class="button button--modal" type="submit">
+              <button class="button modal__button" type="submit">
                 Отправить
               </button>
             </form>
@@ -169,7 +169,7 @@
       <!--Наши особенности-->
       <section class="section">
         <div class="container">
-          <h2 class="title-hidden">Особенности</h2>
+          <h2 class="visually-hidden">Особенности</h2>
           <ul class="features">
             <li class="features__item">
               <div class="features__icon">
@@ -271,31 +271,31 @@
               />
               <h3 class="team-member__name">Игорь Демьяненко</h3>
               <p class="team-member__position">Product Designer</p>
-              <ul class="social-icons">
-                <li class="social-icons__item">
-                  <a href="" class="social-icons__links">
-                    <svg class="social-icons__icon" width="20" height="20">
+              <ul class="list-icons">
+                <li class="list-icons__item">
+                  <a href="" class="list-icons__link">
+                    <svg class="list-icons__icon" width="20" height="20">
                       <use href="./images/icons.svg#instagram"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-icons__item">
-                  <a href="" class="social-icons__links">
-                    <svg class="social-icons__icon" width="20" height="20">
+                <li class="list-icons__item">
+                  <a href="" class="list-icons__link">
+                    <svg class="list-icons__icon" width="20" height="20">
                       <use href="./images/icons.svg#twitter"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-icons__item">
-                  <a href="" class="social-icons__links">
-                    <svg class="social-icons__icon" width="20" height="20">
+                <li class="list-icons__item">
+                  <a href="" class="list-icons__link">
+                    <svg class="list-icons__icon" width="20" height="20">
                       <use href="./images/icons.svg#facebook"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-icons__item">
-                  <a href="" class="social-icons__links">
-                    <svg class="social-icons__icon" width="20" height="20">
+                <li class="list-icons__item">
+                  <a href="" class="list-icons__link">
+                    <svg class="list-icons__icon" width="20" height="20">
                       <use href="./images/icons.svg#linkedin"></use>
                     </svg>
                   </a>
@@ -312,31 +312,31 @@
               <h3 class="team-member__name">Ольга Репина</h3>
               <p class="team-member__position">Frontend Developer</p>
 
-              <ul class="social-icons">
-                <li class="social-icons__item">
-                  <a href="" class="social-icons__links">
-                    <svg class="social-icons__icon" width="20" height="20">
+              <ul class="list-icons">
+                <li class="list-icons__item">
+                  <a href="" class="list-icons__link">
+                    <svg class="list-icons__icon" width="20" height="20">
                       <use href="./images/icons.svg#instagram"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-icons__item">
-                  <a href="" class="social-icons__links">
-                    <svg class="social-icons__icon" width="20" height="20">
+                <li class="list-icons__item">
+                  <a href="" class="list-icons__link">
+                    <svg class="list-icons__icon" width="20" height="20">
                       <use href="./images/icons.svg#twitter"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-icons__item">
-                  <a href="" class="social-icons__links">
-                    <svg class="social-icons__icon" width="20" height="20">
+                <li class="list-icons__item">
+                  <a href="" class="list-icons__link">
+                    <svg class="list-icons__icon" width="20" height="20">
                       <use href="./images/icons.svg#facebook"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-icons__item">
-                  <a href="" class="social-icons__links">
-                    <svg class="social-icons__icon" width="20" height="20">
+                <li class="list-icons__item">
+                  <a href="" class="list-icons__link">
+                    <svg class="list-icons__icon" width="20" height="20">
                       <use href="./images/icons.svg#linkedin"></use>
                     </svg>
                   </a>
@@ -353,31 +353,31 @@
               <h3 class="team-member__name">Николай Тарасов</h3>
               <p class="team-member__position">Marketing</p>
 
-              <ul class="social-icons">
-                <li class="social-icons__item">
-                  <a href="" class="social-icons__links">
-                    <svg class="social-icons__icon" width="20" height="20">
+              <ul class="list-icons">
+                <li class="list-icons__item">
+                  <a href="" class="list-icons__link">
+                    <svg class="list-icons__icon" width="20" height="20">
                       <use href="./images/icons.svg#instagram"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-icons__item">
-                  <a href="" class="social-icons__links">
-                    <svg class="social-icons__icon" width="20" height="20">
+                <li class="list-icons__item">
+                  <a href="" class="list-icons__link">
+                    <svg class="list-icons__icon" width="20" height="20">
                       <use href="./images/icons.svg#twitter"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-icons__item">
-                  <a href="" class="social-icons__links">
-                    <svg class="social-icons__icon" width="20" height="20">
+                <li class="list-icons__item">
+                  <a href="" class="list-icons__link">
+                    <svg class="list-icons__icon" width="20" height="20">
                       <use href="./images/icons.svg#facebook"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-icons__item">
-                  <a href="" class="social-icons__links">
-                    <svg class="social-icons__icon" width="20" height="20">
+                <li class="list-icons__item">
+                  <a href="" class="list-icons__link">
+                    <svg class="list-icons__icon" width="20" height="20">
                       <use href="./images/icons.svg#linkedin"></use>
                     </svg>
                   </a>
@@ -394,31 +394,31 @@
               <h3 class="team-member__name">Михаил Ермаков</h3>
               <p class="team-member__position">UI Designer</p>
 
-              <ul class="social-icons">
-                <li class="social-icons__item">
-                  <a href="" class="social-icons__links" aria-label="instagram">
-                    <svg class="social-icons__icon" width="20" height="20">
+              <ul class="list-icons">
+                <li class="list-icons__item">
+                  <a href="" class="list-icons__link" aria-label="instagram">
+                    <svg class="list-icons__icon" width="20" height="20">
                       <use href="./images/icons.svg#instagram"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-icons__item">
-                  <a href="" class="social-icons__links" aria-label="twitter">
-                    <svg class="social-icons__icon" width="20" height="20">
+                <li class="list-icons__item">
+                  <a href="" class="list-icons__link" aria-label="twitter">
+                    <svg class="list-icons__icon" width="20" height="20">
                       <use href="./images/icons.svg#twitter"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-icons__item">
-                  <a href="" class="social-icons__links" aria-label="facebook">
-                    <svg class="social-icons__icon" width="20" height="20">
+                <li class="list-icons__item">
+                  <a href="" class="list-icons__link" aria-label="facebook">
+                    <svg class="list-icons__icon" width="20" height="20">
                       <use href="./images/icons.svg#facebook"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-icons__item">
-                  <a href="" class="social-icons__links" aria-label="linked in">
-                    <svg class="social-icons__icon" width="20" height="20">
+                <li class="list-icons__item">
+                  <a href="" class="list-icons__link" aria-label="linked in">
+                    <svg class="list-icons__icon" width="20" height="20">
                       <use href="./images/icons.svg#linkedin"></use>
                     </svg>
                   </a>
@@ -433,46 +433,46 @@
 
       <section class="section">
         <div class="container">
-          <h2 class="section-title">Постоянные клиенты</h2>
+          <h2 class="section__title">Постоянные клиенты</h2>
           <ul class="clients">
-            <li class="clients-list">
-              <a href="" class="client-link">
-                <svg class="icons-client" width="41" height="46.7">
+            <li class="clients__item">
+              <a href="" class="clients__link">
+                <svg class="clients__icon" width="41" height="46.7">
                   <use href="./images/icons.svg#client1"></use>
                 </svg>
               </a>
             </li>
-            <li class="clients-list">
-              <a href="" class="client-link">
-                <svg class="icons-client" width="40" height="52">
+            <li class="clients__item">
+              <a href="" class="clients__link">
+                <svg class="clients__icon" width="40" height="52">
                   <use href="./images/icons.svg#client2"></use>
                 </svg>
               </a>
             </li>
-            <li class="clients-list">
-              <a href="" class="client-link">
-                <svg class="icons-client" width="43.46" height="41.18">
+            <li class="clients__item">
+              <a href="" class="clients__link">
+                <svg class="clients__icon" width="43.46" height="41.18">
                   <use href="./images/icons.svg#client3"></use>
                 </svg>
               </a>
             </li>
-            <li class="clients-list">
-              <a href="" class="client-link">
-                <svg class="icons-client" width="84.44" height="40.62">
+            <li class="clients__item">
+              <a href="" class="clients__link">
+                <svg class="clients__icon" width="84.44" height="40.62">
                   <use href="./images/icons.svg#client4"></use>
                 </svg>
               </a>
             </li>
-            <li class="clients-list">
-              <a href="" class="client-link">
-                <svg class="icons-client" width="62.54" height="45.43">
+            <li class="clients__item">
+              <a href="" class="clients__link">
+                <svg class="clients__icon" width="62.54" height="45.43">
                   <use href="./images/icons.svg#client5"></use>
                 </svg>
               </a>
             </li>
-            <li class="clients-list">
-              <a href="" class="client-link">
-                <svg class="icons-client" width="93.79" height="43.93">
+            <li class="clients__item">
+              <a href="" class="clients__link">
+                <svg class="clients__icon" width="93.79" height="43.93">
                   <use href="./images/icons.svg#client6"></use>
                 </svg>
               </a>
@@ -507,14 +507,16 @@
           </address>
         </div>
 
-        <div class="footer-icons">
-          <p class="footer-icons__title">ПРИСОЕДЕНЯЙТЕСЬ</p>
+        <!-- social -->
 
-          <ul class="social-icons footer-icons__social-icons">
-            <li class="social-icons__item">
-              <a href="" class="social-icons__links social-links">
+        <div class="social">
+          <p class="social__title">ПРИСОЕДЕНЯЙТЕСЬ</p>
+
+          <ul class="list-icons social__list-icons">
+            <li class="list-icons__item">
+              <a href="" class="list-icons__link social__link">
                 <svg
-                  class="social-icons__icon icon-footer"
+                  class="list-icons__icon social__icon"
                   width="20"
                   height="20"
                 >
@@ -522,10 +524,10 @@
                 </svg>
               </a>
             </li>
-            <li class="social-icons__item">
-              <a href="" class="social-icons__links social-links">
+            <li class="list-icons__item">
+              <a href="" class="list-icons__link social-link">
                 <svg
-                  class="social-icons__icon icon-footer"
+                  class="list-icons__icon social__icon"
                   width="20"
                   height="20"
                 >
@@ -533,10 +535,10 @@
                 </svg>
               </a>
             </li>
-            <li class="social-icons__item">
-              <a href="" class="social-icons__links social-links">
+            <li class="list-icons__item">
+              <a href="" class="list-icons__link social-link">
                 <svg
-                  class="social-icons__icon icon-footer"
+                  class="list-icons__icon social__icon"
                   width="20"
                   height="20"
                 >
@@ -544,10 +546,10 @@
                 </svg>
               </a>
             </li>
-            <li class="social-icons__item">
-              <a href="" class="social-icons__links social-links">
+            <li class="list-icons__item">
+              <a href="" class="list-icons__link social-link">
                 <svg
-                  class="social-icons__icon icon-footer"
+                  class="list-icons__icon social__icon"
                   width="20"
                   height="20"
                 >
@@ -557,19 +559,28 @@
             </li>
           </ul>
         </div>
-        <div class="footer-modal">
-          <form action="javascript:void(0);" class="footer-form">
-            <p class="footer-modal-text">Подпишитесь на рассылку</p>
-            <div class="footer-form-field">
+
+        <!-- subscription -->
+
+        <div class="subscription">
+          <form action="javascript:void(0);" class="subscription__form">
+            <p class="subscription__text">Подпишитесь на рассылку</p>
+            <div class="subscription__form-field">
               <label for="email"></label>
-              <input type="email" name="mail" id="email" placeholder="E-mail" />
+              <input
+                type="email"
+                name="mail"
+                id="email"
+                placeholder="E-mail"
+                class="subscription__input"
+              />
+              <button class="button subscription__button" type="submit">
+                Подписаться
+                <svg width="24" height="24" class="subscription__icon">
+                  <use href="./images/icons.svg#plane"></use>
+                </svg>
+              </button>
             </div>
-            <button class="button footer-modal-button" type="submit">
-              Подписаться
-              <svg width="24" height="24" class="footer-modal-icon">
-                <use href="./images/icons.svg#plane"></use>
-              </svg>
-            </button>
           </form>
         </div>
       </div>
