07-Scss-all-pages

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <!--Верхняя линия-->
     <header class="page-header">
       <div class="container">
-        <div class="header">
+        <div class="page-header__content">
           <nav class="page-header__nav">
             <a class="logo" href="./index.html">
-              Web<span class="logo__text-black">Studio</span>
+              Web<span class="logo--black">Studio</span>
             </a>
             <ul class="site-nav">
               <li class="site-nav__item">
@@ -232,7 +232,7 @@
                 class="works__image"
               />
               <div class="works__content">
-                <p class="works__text">Десктопные приложения</p>
+                <p class="works__title">Десктопные приложения</p>
               </div>
             </li>
             <li class="works__item">
@@ -244,7 +244,7 @@
                 class="works__image"
               />
               <div class="works__content">
-                <p class="works__text">Мобильные приложения</p>
+                <p class="works__title">Мобильные приложения</p>
               </div>
             </li>
             <li class="works__item">
@@ -256,7 +256,7 @@
                 class="works__image"
               />
               <div class="works__content">
-                <p class="works__text">Дизайнерские решения</p>
+                <p class="works__title">Дизайнерские решения</p>
               </div>
             </li>
           </ul>
@@ -495,7 +495,7 @@
       <div class="container page-footer__container">
         <div>
           <a class="logo" href="./index.html"
-            >Web<span class="logo__text-white">Studio</span></a
+            >Web<span class="logo--white">Studio</span></a
           >
           <address>
             <ul class="address">
@@ -573,7 +573,7 @@
 
         <div class="subscription">
           <form action="javascript:void(0);" class="subscription__form">
-            <p class="subscription__text">Подпишитесь на рассылку</p>
+            <p class="subscription__title">Подпишитесь на рассылку</p>
             <div class="subscription__form-field">
               <label for="email"></label>
               <input
